@@ -23,6 +23,7 @@ Bug Fixes::
 
 * keep caret between items in menu macro with previous item if items wrap
 * draw border on heading (section title or discrete heading) if it is advanced to next page (#2322)
+* arrange heading even if section is empty
 * don't force justify first line of abstract if it ends with a hard break
 * don't include children of section with empty title in TOC
 * don't include children of section with empty title in outline
